split logic, fixed blackjack to only work for 2 cards